--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,5 @@ dependencies {
     // Saved state module for ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation("io.coil-kt:coil-compose:2.2.2")
 }
